--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
   </main>
 
   <footer>
-    Página criada como exemplo de "Guia de Viagens" — adicione sua imagem em `lisboa.jpg`.
+    Página criada por Renan de Lima Souza - Atividade Aula28-01-26.
   </footer>
 </body>
+
 </html>
